--- a/application/index/view/index/list.html
+++ b/application/index/view/index/list.html
@@ -1,63 +1,184 @@
 {extend name="index/index"}
 {block name="main"}
-    <!--Main Content Wrap Start-->
-<div class="gt_sub_banner_bg default_width">
-    <div class="container">
-        <div class="gt_sub_banner_hdg  default_width">
-            <h2>乡村旅游</h2>
-            <h6>开始的地方</h6>
+    <!--Sub Banner Wrap Start -->
+    <div class="gt_sub_banner_bg default_width">
+        <div class="container">
+            <div class="gt_sub_banner_hdg  default_width">
+                <h2>乡村旅游</h2>
+                <h6>开始的地方</h6>
+            </div>
         </div>
     </div>
-</div>
+    <!--Sub Banner Wrap End -->
+    <!--Breadcrumb Wrap End -->
+    <div class="gt_breadcrumb_bg default_width">
+        <div class="container">
+            <div class="gt_breadcrumb_wrap default_width">
+                <ul>
+                    <li><a href="index/index/index">Home</a></li>
+                    <li><a href="#">详情</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!--Breadcrumb Wrap End -->
+
+    <!--Main Content Wrap Start-->
     <div class="gt_content_wrap">
-        <!--Course Grid Wrap Start-->
-        <section>
+        <!--Blog Listing Wrap Start-->
+        <section class="gt_courses_bg">
             <div class="container">
                 <div class="row">
-                    {volist name="list" id="list"}
-                    <div class="col-md-4 mb30">
-                        <div class="item flip_container">
-                            <div class="gt_flip_effect">
+                    <!--Blog Listing List Wrap Start-->
+                    <aside class="col-md-4">
+                        <div class="gt_resp_margn default_width">
 
-                                <div class="gt_team2_wrap">
-                                    <img src="/uploads/{$list.pic}" width="280" height="250">
-                                    <div class="gt_team2_name">
-                                        <h6>美丽乡村</h6>
-                                        <h6>名称:{$list.gd_title}</h6>
-                                        <span>简介:{$list.gd_abstract}</span>
-                                        <p>单价:￥{$list.price}</p>
-                                    </div>
-                                </div>
 
-                                <div class="gt_team2_des_wrap">
-                                    <div class="gt_team2_align_center">
-                                        <h6>{$list.gd_title}</h6>
-                                        <span>{$list.gd_abstract}</span>
-                                        <p> <a href="{:url('/goodsdetail',['id'=>$list.id,'bus_id'=>$list.bus_id,'cid'=>$list.c_id])}"><h4>点击查看详情</h4></a></p>
-                                        <!--<ul class="gt_scl_icon">-->
-                                            <!--<li><a class="bg_fb" href="#"><i class="fa fa-facebook"></i></a></li>-->
-                                            <!--<li><a class="bg_twitter" href="#"><i class="fa fa-twitter"></i></a></li>-->
-                                            <!--<li><a class="bg_gp" href="#"><i class="fa fa-google-plus"></i></a></li>-->
-                                            <!--<li><a class="bg_linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>-->
-                                            <!--<li><a class="bg_behance" href="#"><i class="fa fa-behance"></i></a></li>-->
-                                        <!--</ul>-->
-                                    </div>
+                            <!--Aside Categories Wrap Start-->
+                            <div class="gt_aside_category gt_aside2_hdg mb30">
+                                <h5>景区浏览排行</h5>
+                                <ul>
+                                    {volist name="scylist" id="v"}
+                                        <li><a href="{:url('/goodsdetail',['id'=>$v.id,'bus_id'=>$v.bus_id,'cid'=>$v.c_id])}">{$v.gd_title}</a> <span>{$v.gd_view}</span></li>
+                                    {/volist}
+                                </ul>
+                            </div>
+                            <!--Aside Categories Wrap End-->
+
+                            <!--Aside Featured Courses Wrap Start-->
+                            <div class="gt_featured_course_list gt_aside2_hdg mb30">
+                                <h5>酒店专区</h5>
+                                <ul class="gt_aside_fea_course">
+                                    <a href="{:url('/goodsdetail',['id'=>$v.id,'bus_id'=>$v.bus_id,'cid'=>$v.c_id])}">
+                                    {volist name="hotellist" id="v"}
+                                    <li>
+                                        <figure>
+                                            <img src="/uploads/{$v.pic}">
+                                        </figure>
+                                        <div class="aside_fea_course_des">
+                                            <h6><a href="{:url('/goodsdetail',['id'=>$v.id,'bus_id'=>$v.bus_id,'cid'=>$v.c_id])}">{$v.gd_abstract}</a></h6>
+                                            <span>Price:¥{$v.price}</span>
+                                        </div>
+                                    </li>
+                                   {/volist}
+                                    </a>
+                                </ul>
+                            </div>
+                            <!--Aside Featured Courses Wrap End-->
+
+                            <!--&lt;!&ndash;Aside News Letter Wrap Start&ndash;&gt;-->
+                            <div class="gt_aside_newsletter default_width mb30">
+                                <h5>乡村风景图</h5>
+                                <p>梅子金黄杏子肥,
+                                    麦花雪白菜花稀.
+                                    日长篱落无人过,
+                                    唯有蜻蜓蛱蝶飞.</p>
+                                <ul class="gt_checkbox_list">
+                                    <li>
+                                        <img src="/uploads/scy1.jpg" width="250">
+                                        <p>凉风起天末，君子意如何。</p>
+                                    </li>
+                                    <li>
+                                        <img src="/uploads/scy2.jpg" width="250">
+                                        <p>堤上游人逐画船，拍堤春水四垂天</p>
+                                    </li>
+                                    <li>
+                                        <img src="/uploads/scy3.jpg" width="250">
+                                        <p>寂寂江山摇落处，怜君何事到天涯。</p>
+                                    </li>
+                                    <li>
+                                        <img src="/uploads/scy4.jpg" width="250">
+                                        <p>溪涧岂能留得住，终归大海作波涛。</p>
+                                    </li>
+                                </ul>
+
+                            </div>
+                            <!--Aside News Letter Wrap End-->
+                        </div>
+                    </aside>
+                    <!--Blog Listing List Wrap End-->
+
+                    <!--Aside Wrap End-->
+                    <div class="col-md-8">
+
+                        {volist name="list" id="list"}
+
+                        <div class="gt_blog_listing default_width mb30">
+                            <figure>
+                                <img src="/uploads/{$list.pic}" alt="">
+                                <figcaption class="gt_gallery_style1_des">
+                                    <ul>
+                                        <li><a href="{:url('/goodsdetail',['id'=>$list.id,'bus_id'=>$list.bus_id,'cid'=>$list.c_id])}"><i class="fa fa-link"></i></a></li>
+                                        <li><a href="/uploads/{$list.pic}" data-rel="prettyPhoto"><i class="fa fa-search"></i></a></li>
+                                    </ul>
+                                    <h3>{$list.gd_title}</h3>
+                                </figcaption>
+                            </figure>
+                            <div class="gt_listing_des default_width">
+                                <ul class="gt_event_meta">
+                                    <li><i class="fa fa-calendar"></i>8:00 am-5:00</li>
+                                    <li><i class="fa fa-user"></i>￥{$list.price}</li>
+                                </ul>
+                                <h6><a href="{:url('/goodsdetail',['id'=>$list.id,'bus_id'=>$list.bus_id,'cid'=>$list.c_id])}">{$list.gd_title}</a></h6>
+                                <p>{$list.gd_abstract}</p>
+                                <a href="{:url('/goodsdetail',['id'=>$list.id,'bus_id'=>$list.bus_id,'cid'=>$list.c_id])}">Read More</a>
+                                <div class="gt_listing_share_wrap">
+                                    <button class="gt_listing_share"><i class="fa fa-share-alt"></i></button>
+                                    <ul class="gt_scl_icon">
+                                        <li><a class="bg_fb" href="{:url('/goodsdetail',['id'=>$list.id,'bus_id'=>$list.bus_id,'cid'=>$list.c_id])}"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a class="bg_twitter" href="{:url('/goodsdetail',['id'=>$list.id,'bus_id'=>$list.bus_id,'cid'=>$list.c_id])}"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a class="bg_gp" href="{:url('/goodsdetail',['id'=>$list.id,'bus_id'=>$list.bus_id,'cid'=>$list.c_id])}"><i class="fa fa-google-plus"></i></a></li>
+                                        <li><a class="bg_linkedin" href="{:url('/goodsdetail',['id'=>$list.id,'bus_id'=>$list.bus_id,'cid'=>$list.c_id])}"><i class="fa fa-linkedin"></i></a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
+
+                        {/volist}
+
+
+
+
                     </div>
-                    {/volist}
-{/block}
+                    <!--Aside Wrap Start-->
+                </div>
+            </div>
+        </section>
+        <!--Blog Listing Wrap End-->
+    </div>
+    <!--Main Content Wrap End-->
 
+    <!--Footer Wrap Start-->
 
+        <!--Copyright Wrap End-->
+        <div class="gt_copyright_wrap">
+            <div class="container">
+                <div class="gt_copyright_des">
+                    <p>Copyright © <a href="#">Edu-skill </a> 2016. All rights reserved.</p>
+                    <span>Created by: <a href="#">2goodtheme.com</a></span>
+                </div>
+            </div>
+        </div>
+        <!--Copyright Wrap Start-->
+    </footer>
+    <!--Footer Wrap End-->
+
+    <!--Back to Top Wrap Start-->
+    <div class="back-to-top">
+        <a href="#home"><i class="fa fa-angle-up"></i></a>
+    </div>
+    <!--Back to Top Wrap Start-->
+
+</div>
 <!--gt Wrapper End-->
+{/block}
 {block name="myjs"}
 <!--Jquery Library-->
 <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
 <!--Bootstrap core JavaScript-->
 <script src="http://www.jq22.com/jquery/bootstrap-3.3.4.js"></script>
-<!--Chosen JavaScript-->
-<script src="js/chosen.jquery.min.js"></script>
+<!--Pretty Photo JavaScript-->
+<script src="/static/app/index/js/jquery.prettyPhoto.js"></script>
 <!--Custom JavaScript-->
-<script src="js/custom.js"></script>
+<script src="/static/app/index/js/custom.js"></script>
 {/block}
