--- a/mobile/index/view/index/list.html
+++ b/mobile/index/view/index/list.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="am-header-right am-header-nav">
-                <a href="javascript:;" class="iconfont pet_head_gd_ico">&#xe600;</a>
+                <a href="{:url('/')}" class="am-icon-home am-icon-md"></a>
             </div>
         </header>
     </div>
