--- a/application/admin/view/scenery/cateList.html
+++ b/application/admin/view/scenery/cateList.html
@@ -57,7 +57,7 @@
                             <td align="center" >{$v.h_name}</td>
                             <td class="col-md-4">
                                 <a class=" btn btn-primary" href="{:url('admin/scenerycate/edit',['id'=>$v['id']])}">修改分类</a>
-                                <button class=" btn btn-danger del-btn" cate-id="{$v.id}" >删除分类</button>
+                                <!--<button class=" btn btn-danger del-btn" cate-id="{$v.id}" >删除分类</button>-->
                             </td>
                         </tr>
                         {/volist}
