--- a/public/static/app/index/css/style.css
+++ b/public/static/app/index/css/style.css
@@ -430,7 +430,7 @@ ul.gt_rating_star li a{display: inline-block;color: #ff9c00;margin: 0px 0px 0px 
 		   Facts and Figure Wrap CSS
 	  ==============================================================
 */
-.gt_fact_bg {background-image: url(../extra-images/facts-bg.jpg);background-size: cover;background-repeat: no-repeat;background-position: center;}
+.gt_fact_bg {background-image: url(../images/sha.jpg);background-size: cover;background-repeat: no-repeat;background-position: center;}
 .gt_number_count_wrap {float: left;width: 100%;position: relative;text-align: center;}
 .gt_number_count_wrap i {margin: 0px 0px 10px;font-size: 50px;display: block;}
 .gt_number_count_wrap h4 {position: relative;display: inline-block;font-size: 60px;font-weight: 600;font-family: 'Montserrat', sans-serif;min-width: 100px;}
@@ -469,7 +469,7 @@ ul.gt_scl_icon li:hover a{color: #ffffff;}
 		   Testimonial Wrap CSS
 	  ==============================================================
 */
-.gt_testimonial_bg{background-image: url(../extra-images/testimonial-bg.jpg);background-size: cover;background-repeat: no-repeat;background-position: center;}
+.gt_testimonial_bg{background-image: url(../images/timg.jpg);background-size: cover;background-repeat: no-repeat;background-position: center;}
 .gt_testimonial_wrap{float:left;width:100%;position:relative;}
 .gt_testimonial_wrap{padding:25px 20px;margin:0px 0px 30px;background-color: #fff;border-radius: 5px;}
 .gt_testimonial_wrap:before{content:"";position:absolute;bottom:-20px;right:20px;width: 0;height: 0;border-style: solid;border-width: 20px 20px 0 0;border-color: #fff transparent transparent transparent;	}
@@ -516,8 +516,8 @@ ul.gt_event_meta li>a{display: inline-block;color: #999999;margin-left: 5px;}
 		   Sub Banner Wrap CSS
 	  ==============================================================
 */
-.gt_sub_banner_bg{background-image: url(../extra-images/sub-banner.jpg);background-size: cover;background-position: center;background-repeat: no-repeat;}
-.gt_sub_banner_bg:before{content: "";position: absolute;top: 0px;left: 0px;width: 100%;height: 100%;background-color: rgba(0,0,0,0.8);}
+.gt_sub_banner_bg{background-image: url(../images/bg.png);background-size: cover;background-position: center;background-repeat: no-repeat;}
+.gt_sub_banner_bg:before{content: "";position: absolute;top: 0px;left: 0px;width: 100%;height: 100%;background-color: rgba(0,0,0,0.2);}
 .gt_sub_banner_hdg{text-align: center;padding: 80px 0px;}
 .gt_sub_banner_hdg h2{color: #fff;text-transform: uppercase;font-weight: 600;margin: 0px 0px 5px;}
 .gt_sub_banner_hdg h6{color: #ffffff;font-size: 16px;text-transform: capitalize;font-weight: 600;}
