--- a/public/static/app/index/css/widget.css
+++ b/public/static/app/index/css/widget.css
@@ -44,7 +44,7 @@
 		   Copyright Css
 	  ==============================================================
 */
-.gt_copyright_wrap{float:left;width:100%;position:relative;background-color:#121011;padding:10px 0px;}
+.gt_copyright_wrap{float:left;width:100%;position:relative;background-color:#121011;padding:10px 0px;margin-top: 0px;}
 .gt_copyright_des{float:left;width:100%;position:relative;}
 .gt_copyright_des p{margin:0px;	color:#70777d;float:left;display: inline-block;}
 .gt_copyright_des p a,.gt_copyright_des span a{display:inline-block;color:#70777d;}
@@ -55,8 +55,8 @@
 	  ==============================================================
 */
 
-.back-to-top {position: fixed ;right: 20px;bottom: 20px;width: 45px;height: 45px;text-align: center;line-height: 40px;background-color: #DBF271;transform:rotate(45deg);-moz-transform:rotate(45deg);-webkit-transform:rotate(45deg);-ms-transform:rotate(45deg);}
-.back-to-top a {color: #fff;font-weight: bold;font-size: 18px;font-weight: bold;display: inline-block;width: 30px;height: 30px;background-color: #DBF271;left: 0px;right: 0px;top: 0px;bottom: 0px;margin: auto;position: absolute;line-height: 30px;}
+.back-to-top {position: fixed ;right: 20px;bottom: 20px;width: 50px;height: 50px;text-align: center;line-height: 40px;background-color:#2DCC70;transform:rotate(45deg);-moz-transform:rotate(45deg);-webkit-transform:rotate(45deg);-ms-transform:rotate(45deg);z-index: 100}
+.back-to-top a {color: #fff;font-weight: bold;font-size: 24px;font-weight: bold;display: inline-block;width: 45px;height: 45px;background-color: #2DCC70;left: 0px;right: 0px;top: 0px;bottom: 0px;margin: auto;position: absolute;line-height: 45px;}
 /*.back-to-top a>i{transform:rotate(-43deg);-moz-transform:rotate(-43deg);-webkit-transform:rotate(-43deg);-ms-transform:rotate(-43deg);}*/
 
 .back-to-top a:hover {background-color: #333333;}
